delete user is broken

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-.gradle
-
-bin
-
-Reports
-
-Libs
-
-output
-
-!output/.gitkeep
-build
-
-.classpath
-
-.project
+.cache/Keywords
+.settings
+Include/config
+.gitignore
+OrangeWebTest.prj
+build.gradle
+console.properties
